scripts/nullaway/annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8.txt
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/interfaces/Player.java:45: error: [NullAway] initializer method does not guarantee @NonNull fields game (line 13), rack (line 14) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	protected Player(String name){
	          ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/racko/Rack.java:516: error: [NullAway] dereferenced expression lus_cache_tree is @Nullable
			lus_cache = lus_cache_tree.linearize(use_combos);
			                          ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/client/Main.java:34: error: [NullAway] initializer method does not guarantee @NonNull fields gthread (line 27), requester (line 30) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	private Main(int rack_size, Player ai) throws Exception{
	        ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/client/Main.java:96: error: [NullAway] passing @Nullable parameter 'ai' where @NonNull is required
						win = new Main(rsize, ai);
						                      ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/client/PlayerConsole.java:46: error: [NullAway] dereferenced expression System.console() is @Nullable
			String output = System.console().readLine("Draw from discard [y/n/h]:");
			                                ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/NeuralNetworks/Network.java:319: error: [NullAway] passing @Nullable parameter 'filename' where @NonNull is required
			try (FileWriter x = new FileWriter(new File(filename))) {
			                                            ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/reinforcement/ReinforcementLearner.java:35: error: [NullAway] initializer method does not guarantee @NonNull fields indexer (line 11), playStates (line 12), drawStates (line 13) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public ReinforcementLearner(BufferedReader buff)
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/reinforcement/ModelExploiter.java:18: error: [NullAway] initializer method does not guarantee @NonNull field rl (line 15) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public ModelExploiter(){
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/reinforcement/ModelExploiter.java:82: error: [NullAway] dereferenced expression writer is @Nullable
				writer.close();
				      ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelTD.java:22: error: [NullAway] @NonNull static field net_layers not initialized
	private static int[] net_layers;
	                     ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelTD.java:23: error: [NullAway] assigning @Nullable expression to @NonNull field
	private static Network net = null;
	                       ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelTD.java:150: error: [NullAway] dereferenced expression data_cur is @Nullable
		net.compute(data_cur.inputs);
		                    ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelKyle.java:42: error: [NullAway] initializer method does not guarantee @NonNull field weights (line 26) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public boolean register(Game g, Rack r){
	               ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelDiablo.java:74: error: [NullAway] initializer method does not guarantee @NonNull fields old_score (line 22), last_score (line 22), base_score (line 22), discard_score (line 22), score_net (line 30) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public boolean register(Game g, Rack r){
	               ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelDiablo.java:155: error: [NullAway] assigning @Nullable expression to @NonNull field
		last_score = null;
		           ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelDiablo.java:244: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return max_score;
		^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelAI.java:185: error: [NullAway] initializer method does not guarantee @NonNull fields draw_instance (line 22), play_instance (line 22) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public boolean register(Game g, Rack r){
	               ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelAI.java:26: error: [NullAway] assigning @Nullable expression to @NonNull field
	public Network drawNet = null, playNet = null;
	               ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelAI.java:26: error: [NullAway] assigning @Nullable expression to @NonNull field
	public Network drawNet = null, playNet = null;
	                               ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelAI.java:233: error: [NullAway] dereferenced expression drawHistory is @Nullable
				drawHistory.add(draw_instance);
				           ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelAI.java:234: error: [NullAway] dereferenced expression playHistory is @Nullable
				playHistory.add(play_instance);
				           ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelAI.java:255: error: [NullAway] dereferenced expression drawHistory is @Nullable
		drawHistory.clear();
		           ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelAI.java:256: error: [NullAway] dereferenced expression playHistory is @Nullable
		playHistory.clear();
		           ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelAI.java:304: error: [NullAway] enhanced-for expression drawHistory is @Nullable
			for (DataInstance d: drawHistory){
			                     ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelAI.java:309: error: [NullAway] enhanced-for expression playHistory is @Nullable
			for (DataInstance p: playHistory){			
			                     ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelCasandra.java:95: error: [NullAway] initializer method does not guarantee @NonNull fields drawNet (line 22), playNet (line 22) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public boolean register(Game g, Rack r) {
	               ^
    (see http://t.uber.com/nullaway )
../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelCasandra.java:80: error: [NullAway] dereferenced expression net is @Nullable
		else if (net.inputNodes() != nodeCount(forDraw, true) || net.outputNodes() != nodeCount(forDraw, false))
		            ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/urlfaa9045c2e_Azmisov_racko_ai_tgz-pJ8-client_TestingJ8/src/models/ModelKyle.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
27 errors
